--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
   --modal-bg-color: rgb(0, 0, 0, 0.7);
   --white-text-color: #ffffff;
   --black-text-color: #333333;
+  --border-black-color: #000000;
 }
 
 body {
@@ -29,7 +30,7 @@ body {
 }
 
 .container {
-  width: 50%;
+  width: 800px;
 }
 
 .navbar {
@@ -85,4 +86,23 @@ body {
 .navbar .nav-item .nav-btn .nav-btn-icon {
   width: 30px;
   height: 30px;
+}
+
+.game-board {
+  background-color: var(--game-board-bg-color);
+  width: 100%;
+  height: 700px;
+  display: grid;
+  grid-template-columns: repeat(21, 1fr);
+  grid-template-rows: repeat(21, 1fr);
+}
+
+.game-board .snake {
+  background-color: var(--snake-color);
+  border: 1px solid var(--border-black-color);
+}
+
+.game-board .food {
+  background-color: var(--food-color);
+  border: 1px solid var(--border-black-color);
 }
