Overlay and media queries styles added

--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@
   --white-text-color: #ffffff;
   --black-text-color: #333333;
   --border-black-color: #000000;
+  --btn-bg-color: #2f87ad;
+  --btn-bg-hover-color: #266b88;
+  --summary-color: #9e68c0;
 }
 
 body {
@@ -27,10 +30,6 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-}
-
-.container {
-  /*width: 800px;*/
 }
 
 .navbar {
@@ -77,6 +76,8 @@ body {
   outline: none;
   cursor: pointer;
   transition: all 0.3s ease;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .navbar .nav-item .nav-btn:hover {
@@ -95,7 +96,7 @@ body {
 .game-container .game-board {
   background-color: var(--game-board-bg-color);
   width: 100vmin;
-  height: 90vmin;
+  height: 80vmin;
   display: grid;
   grid-template-columns: repeat(20, 1fr);
   grid-template-rows: repeat(20, 1fr);
@@ -108,14 +109,95 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.overlay.hidden,
+.overlay-modal.hidden,
+.overlay-text.hidden {
+  display: none;
 }
 
 .game-container .overlay .overlay-text {
   color: var(--white-text-color);
-  position: relative;
-  top: 50%;
-  left: 50%;
   text-align: center;
-  transform: translate(-50%, -50%);
   font-size: 2.5rem;
+}
+
+.overlay-modal {
+  background-color: #ffffff;
+  width: 50%;
+  height: 80%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+
+.overlay-modal .modal-img-top {
+  width: 100%;
+  height: 50%;
+}
+
+.overlay-modal .modal-header {
+  text-align: center;
+  font-size: 1.7rem;
+  font-weight: bold;
+  color: var(--summary-color);
+  text-transform: uppercase;
+  margin: 20px 0px 10px 0px;
+}
+
+.overlay-modal .score-group {
+  display: flex;
+  align-items: center;
+  margin: 18px;
+}
+
+.overlay-modal .score-group .modal-summary-icon {
+  width: 50px;
+  height: 50px;
+  margin-right: 20px;
+}
+
+.overlay-modal .score-group .score {
+  font-size: 2.2rem;
+}
+
+.overlay-modal .modal-btn {
+  padding: 10px 20px;
+  background-color: var(--btn-bg-color);
+  color: var(--white-text-color);
+  border-radius: 5px;
+  border: 0;
+  outline: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  transition: all 0.3s ease;
+  margin-top: 20px;
+}
+
+.overlay-modal .modal-btn:hover {
+  background-color: var(--btn-bg-hover-color);
+}
+
+@media screen and (max-width: 768px) {
+  .navbar .nav-item .nav-item-icon {
+    width: 30px;
+    height: 30px;
+  }
+
+  .navbar .nav-item h2 {
+    font-size: 1.8rem;
+  }
+
+  .navbar {
+    padding: 5px 15px;
+  }
+
+  .game-container .overlay .overlay-text {
+    font-size: 1.7rem;
+  }
 }
